--- a/package.json
+++ b/package.json
@@ -21,14 +21,21 @@
         "@angular/platform-browser": "~11.0.4",
         "@angular/platform-browser-dynamic": "~11.0.4",
         "@angular/router": "~11.0.4",
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@fortawesome/free-solid-svg-icons": "^5.15.2",
         "@ng-bootstrap/ng-bootstrap": "^9.0.2",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.3.0",
+        "boxicons": "^2.0.7",
+        "font-awesome": "^4.7.0",
         "http": "0.0.1-security",
+        "iconfont": "^0.3.1",
         "jquery": "^3.5.1",
+        "owl.carousel": "^2.3.4",
         "popper.js": "^1.16.1",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
+        "venobox": "^1.9.2",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
