--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
                             "src/favicon.ico",
                             "src/assets",
                             {
-                                "glob": "bootstrap-icons.svg",
-                                "input": "./node_modules/bootstrap-icons/",
+                                "glob": "_redirects",
+                                "input": "src",
                                 "output": "/"
                             }
                         ],
