--- a/angular.json
+++ b/angular.json
@@ -34,8 +34,7 @@
                         ],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "src/styles.scss",
-                            "node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css"
+                            "src/styles.scss"                            
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.min.js",
