--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,9 @@
                             "src/favicon.ico",
                             "src/assets",
                             {
-                                "glob": "_redirects",
-                                "input": "src",
-                                "output": "/"
+                              "glob": "bootstrap-icons.svg",
+                              "input": "./node_modules/bootstrap-icons/",
+                              "output": "/"
                             }
                         ],
                         "styles": [
