--- a/angular.json
+++ b/angular.json
@@ -35,11 +35,12 @@
                         ],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "src/styles.scss"
+                            "src/styles.scss",
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.min.js",
                             "node_modules/bootstrap/dist/js/bootstrap.min.js"
+                            
                         ]
                     },
                     "configurations": {
