--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "@angular/platform-browser-dynamic": "~11.0.4",
         "@angular/router": "~11.0.4",
         "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+        "@types/jquery": "^3.5.5",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.3.0",
+        "dark-mode-switch": "^1.0.0",
         "http": "0.0.1-security",
         "jquery": "^3.5.1",
         "popper.js": "^1.16.1",
