--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/jquery": "^3.5.5",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.3.0",
+        "bootstrap4-toggle": "^3.6.1",
         "dark-mode-switch": "^1.0.0",
         "http": "0.0.1-security",
         "jquery": "^3.5.1",
