--- a/angular.json
+++ b/angular.json
@@ -34,8 +34,9 @@
                             }
                         ],
                         "styles": [
+                            "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "src/styles.scss",
+                            "src/styles.scss"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.min.js",
@@ -99,6 +100,7 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
                             "src/styles.scss"
                         ],
                         "scripts": []
