--- a/package.json
+++ b/package.json
@@ -1,56 +1,59 @@
 {
-    "name": "bolsa-trabajo-front",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve --host 0.0.0.0 --disableHostCheck --poll 500",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~11.0.4",
-        "@angular/common": "~11.0.9",
-        "@angular/compiler": "~11.0.4",
-        "@angular/core": "~11.0.4",
-        "@angular/forms": "~11.0.4",
-        "@angular/http": "^7.2.16",
-        "@angular/localize": "~11.0.4",
-        "@angular/platform-browser": "~11.0.4",
-        "@angular/platform-browser-dynamic": "~11.0.4",
-        "@angular/router": "~11.0.4",
-        "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-        "@types/jquery": "^3.5.5",
-        "bootstrap": "^4.6.0",
-        "bootstrap-icons": "^1.3.0",
-        "bootstrap4-toggle": "^3.6.1",
-        "dark-mode-switch": "^1.0.0",
-        "http": "0.0.1-security",
-        "jquery": "^3.5.1",
-        "popper.js": "^1.16.1",
-        "rxjs": "~6.6.0",
-        "tslib": "^2.0.0",
-        "zone.js": "~0.10.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1100.4",
-        "@angular/cli": "~11.0.4",
-        "@angular/compiler-cli": "~11.0.4",
-        "@types/jasmine": "~3.6.0",
-        "@types/node": "^12.11.1",
-        "codelyzer": "^6.0.0",
-        "jasmine-core": "~3.6.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.1.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.0.3",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
-        "protractor": "~7.0.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~4.0.2"
-    }
+  "name": "bolsa-trabajo-front",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --host 0.0.0.0 --disableHostCheck --poll 500",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~11.0.4",
+    "@angular/cdk": "^11.2.3",
+    "@angular/common": "~11.0.9",
+    "@angular/compiler": "~11.0.4",
+    "@angular/core": "~11.0.4",
+    "@angular/forms": "~11.0.4",
+    "@angular/http": "^7.2.16",
+    "@angular/localize": "~11.0.4",
+    "@angular/material": "^11.2.3",
+    "@angular/platform-browser": "~11.0.4",
+    "@angular/platform-browser-dynamic": "~11.0.4",
+    "@angular/router": "~11.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@types/jquery": "^3.5.5",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
+    "bootstrap4-toggle": "^3.6.1",
+    "dark-mode-switch": "^1.0.0",
+    "http": "0.0.1-security",
+    "jquery": "^3.5.1",
+    "material": "^0.4.3",
+    "popper.js": "^1.16.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular/cli": "~11.0.4",
+    "@angular/compiler-cli": "~11.0.4",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
+  }
 }
