--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "http": "0.0.1-security",
     "jquery": "^3.5.1",
     "material": "^0.4.3",
+    "ng2-search-filter": "^0.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
