--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jquery": "^3.5.1",
     "material": "^0.4.3",
     "ng2-search-filter": "^0.5.1",
+    "pdfmake": "^0.1.71",
+    "pdfmake-wrapper": "^2.1.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -49,6 +51,7 @@
     "@types/electron": "^1.6.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.1.17",
     "codelyzer": "^6.0.0",
     "cypress": "^6.6.0",
     "electron": "^12.0.0",
